Deduplicate two identical files
Replace one file with a relative symlink pointing to the other.

--- a/python/pulp-assets/pypi/shelf-reader/json/index.html
+++ b/python/pulp-assets/pypi/shelf-reader/json/index.html
@@ -1,27 +1,1 @@
-{
-    "info": {
-        "author": "Austin Macdonald",
-        "name": "shelf-reader",
-        "summary": "Make sure your collections are in call number order."
-    },
-    "releases": {
-        "0.1": [
-            {
-                "checksum": "4d11d6a67ec6aa3eb25df2416b6d48f1c6c04d5e745b12d7dbc89aacfc8bcb439c5ccff56324ce8493099e4e2f79a414d2513758782efcaef84b3d8cf00ea45f",
-                "checksum_type": "sha512",
-                "filename": "shelf-reader-0.1.tar.gz",
-                "md5_digest": "2dac570a33d88ca224be86759be59376",
-                "packagetype": "sdist",
-                "path": "source/s/shelf-reader/shelf-reader-0.1.tar.gz#sha512=4d11d6a67ec6aa3eb25df2416b6d48f1c6c04d5e745b12d7dbc89aacfc8bcb439c5ccff56324ce8493099e4e2f79a414d2513758782efcaef84b3d8cf00ea45f"
-            },
-            {
-                "checksum": "1e38ac80980094ea9bb36a3ab9cb31476ac96c7839789caaf99f6bd170c1c12dd802f46270e25f1352380f40fac8f62ef85ddc0ca03bf25922c18a4b1ee04187",
-                "checksum_type": "sha512",
-                "filename": "shelf_reader-0.1-py2-none-any.whl",
-                "md5_digest": "69b867d206f1ff984651aeef25fc54f9",
-                "packagetype": "bdist_wheel",
-                "path": "source/s/shelf-reader/shelf_reader-0.1-py2-none-any.whl#sha512=1e38ac80980094ea9bb36a3ab9cb31476ac96c7839789caaf99f6bd170c1c12dd802f46270e25f1352380f40fac8f62ef85ddc0ca03bf25922c18a4b1ee04187"
-            }
-        ]
-    }
-}
+./index.json
